--- a/expenses-chart-component-main/index.html
+++ b/expenses-chart-component-main/index.html
@@ -1,43 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Expenses chart component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Expenses chart component</title>
 
-  My balance
-  $921.48
+    <!-- css links -->
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body>
+    <main>
+      <div class="container">
+        <div class="balance__container">
+          <div class="balance">
+            <p>My balance</p>
+            <h2>$921.48</h2>
+          </div>
+          <img class="expense__logo" src="./images/logo.svg" alt="" />
+        </div>
 
-  Spending - Last 7 days
+        <div class="expenses__charts">
+          <h2 class="charts__headings">Spending - Last 7 days</h2>
+          <div class="expenses__charts-rating">
+            <div>
+              <div class="charts mon__chart-color" data-tooltip="$17.45"></div>
+              <p id="mon">mon</p>
+            </div>
+            <div>
+              <div class="charts tue__chart-color" data-tooltip="$34.91"></div>
+              <p id="tue">tue</p>
+            </div>
+            <div>
+              <div class="charts wed__chart-color" data-tooltip="$56.36"></div>
+              <p id="wed">wed</p>
+            </div>
+            <div>
+              <div class="charts thu__chart-color" data-tooltip="$31.07"></div>
+              <p id="thu">thu</p>
+            </div>
+            <div>
+              <div class="charts fri__chart-color" data-tooltip="$23.39"></div>
+              <p id="fri">fri</p>
+            </div>
+            <div>
+              <div class="charts sat__chart-color" data-tooltip="$43.28"></div>
+              <p id="sat">sat</p>
+            </div>
+            <div>
+              <div class="charts sun__chart-color" data-tooltip="$25.48"></div>
+              <p id="sun">sun</p>
+            </div>
+          </div>
+          <hr />
+          <div class="expenses__total">
+            <div>
+              <p class="expenses__text">Total this month</p>
+              <h2 class="charts__headings">$478.33</h2>
+            </div>
+            <div>
+              <h2 class="charts__headings chart__percentage">+2.4%</h2>
+              <p class="expenses__text chart__percentage">from last month</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
-  mon
-  tue
-  wed
-  thu
-  fri
-  sat
-  sun
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">perdanaph</a>.
+      </div>
+    </footer>
 
-  Total this month
-  $478.33
-
-  +2.4%
-  from last month
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <script src="./js/script.js"></script>
+  </body>
 </html>
